# image-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  heic2png.py  image2tiles.py  image_lifter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
imgtools_cli/: __main__.py  download.py  heic2png.py  image2chunks.py
src/imgtools_cli/: __main__.py  autocrop.py  download.py  hassan_people_remover.py  heic2png.py  image2chunks.py  image2png.py  image_resize.py
